# long-memory-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  alembic.ini  backlog.md  docker-compose.yml  logger_config.py  main.py  pyproject.toml
alembic/: .env.example  env.py
alembic/versions/: b55c7932cecb_create_table.py  b55c7932cecb_messages_table.py
client/: client.ipynb  client_in_memory_store.ipynb  client_with_persistent_memory.py  client_with_pgvector.py  pyproject.toml
database/: db.py
db/models/: __init__.py  messages.py
service/: main.py
service/routes/: messages.py
