[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.31",
    "openai>=1.75.0",
    "rich>=14.0.0",
    "tavily-python>=0.7.0",
]
